fix: Build change

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ version = 1.0.0
 description = Python bindings for the C2PA library
 long_description = file: README.md
 long_description_content_type = text/markdown
+license = MIT OR Apache-2.0
 
 [options]
 package_dir =
