--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.10.0"
 requires-python = ">=3.10"
 description = "Python bindings for the C2PA Content Authenticity Initiative (CAI) library"
 readme = { file = "README.md", content-type = "text/markdown" }
-license = { text = "MIT OR Apache-2.0" }
+license = "MIT OR Apache-2.0"
 authors = [{ name = "Gavin Peacock", email = "gvnpeacock@adobe.com" }]
 classifiers = [
     "Programming Language :: Python :: 3",
@@ -36,10 +36,4 @@ test = [
 
 [project.scripts]
 download-artifacts = "c2pa.build:download_artifacts"
-
-[tool.hatch.build.targets.wheel]
-packages = ["src/c2pa"]
-
-[tool.hatch.build.hooks.custom]
-path = "c2pa/build.py"
 
