--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
-include LICENSE
+include LICENSE-MIT
+include LICENSE-APACHE
 include README.md
 include requirements.txt
 include scripts/download_artifacts.py
