--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -399,7 +399,22 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/download-artifact@v4
         with:
-          pattern: wheels-*
+          pattern: wheels-*-x64
+          path: dist
+          merge-multiple: true
+      - uses: actions/download-artifact@v4
+        with:
+          pattern: wheels-*-x86
+          path: dist
+          merge-multiple: true
+      - uses: actions/download-artifact@v4
+        with:
+          pattern: wheels-*-aarch64
+          path: dist
+          merge-multiple: true
+      - uses: actions/download-artifact@v4
+        with:
+          pattern: wheels-sdist
           path: dist
           merge-multiple: true
       - name: List contents of dist directory
