--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -385,7 +385,6 @@ jobs:
           name: wheels-sdist
           path: dist
 
-
   release:
     name: Release
     if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch' && github.event.inputs.publish == 'true'
@@ -397,26 +396,30 @@ jobs:
       contents: read
     steps:
       - uses: actions/checkout@v4
+      - name: Create dist directory
+        run: mkdir -p dist
       - uses: actions/download-artifact@v4
         with:
-          pattern: wheels-*-x64
-          path: dist
-          merge-multiple: true
+          pattern: wheels-linux-*
+          path: dist-linux
       - uses: actions/download-artifact@v4
         with:
-          pattern: wheels-*-x86
-          path: dist
-          merge-multiple: true
+          pattern: wheels-macos-*
+          path: dist-macos
       - uses: actions/download-artifact@v4
         with:
-          pattern: wheels-*-aarch64
-          path: dist
-          merge-multiple: true
+          pattern: wheels-windows-*
+          path: dist-windows
       - uses: actions/download-artifact@v4
         with:
           pattern: wheels-sdist
-          path: dist
-          merge-multiple: true
+          path: dist-sdist
+      - name: Combine artifacts
+        run: |
+          cp dist-linux/* dist/ 2>/dev/null || true
+          cp dist-macos/* dist/ 2>/dev/null || true
+          cp dist-windows/* dist/ 2>/dev/null || true
+          cp dist-sdist/* dist/ 2>/dev/null || true
       - name: List contents of dist directory
         run: ls -la dist/
       - name: Publish to TestPyPI
