--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -60,7 +60,16 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: python3 scripts/download_artifacts.py c2pa-v0.55.0
       - name: Build wheel
-        run: python -m build --wheel
+        run: |
+          # Extract platform info from artifact name
+          PLATFORM=$(echo "${{ inputs.artifact-name }}" | cut -d'-' -f2)
+          ARCH=$(echo "${{ inputs.artifact-name }}" | cut -d'-' -f3)
+          # Set environment variable for wheel name
+          export WHEEL_NAME="c2pa_python-0.10.6-${PLATFORM}-${ARCH}-py3-none-any.whl"
+          # Build wheel with custom name
+          python -m build --wheel
+          # Rename the wheel file
+          mv dist/c2pa_python-*.whl "dist/${WHEEL_NAME}"
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
