--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -59,7 +59,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: python3 scripts/download_artifacts.py c2pa-v0.55.0
-      - name: Build wheel
+      - name: Build wheel (Unix)
+        if: runner.os != 'Windows'
         run: |
           # Extract platform info from artifact name
           PLATFORM=$(echo "${{ inputs.artifact-name }}" | cut -d'-' -f2)
@@ -70,6 +71,24 @@ jobs:
           python -m build --wheel
           # Rename the wheel file
           mv dist/c2pa_python-*.whl "dist/${WHEEL_NAME}"
+
+      - name: Build wheel (Windows)
+        if: runner.os == 'Windows'
+        shell: pwsh
+        run: |
+          # Extract platform info from artifact name
+          $artifactName = "${{ inputs.artifact-name }}"
+          $parts = $artifactName -split '-'
+          $PLATFORM = $parts[1]
+          $ARCH = $parts[2]
+          # Set environment variable for wheel name
+          $env:WHEEL_NAME = "c2pa_python-0.10.7-${PLATFORM}-${ARCH}-py3-none-any.whl"
+          # Build wheel with custom name
+          python -m build --wheel
+          # Rename the wheel file
+          Get-ChildItem -Path dist -Filter "c2pa_python-*.whl" | ForEach-Object {
+            Move-Item -Path $_.FullName -Destination "dist/$env:WHEEL_NAME" -Force
+          }
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
