--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -62,43 +62,19 @@ jobs:
       - name: Build wheel (Unix)
         if: runner.os != 'Windows'
         run: |
-          # Extract platform info from artifact name
-          PLATFORM=$(echo "${{ inputs.artifact-name }}" | cut -d'-' -f2)
-          ARCH=$(echo "${{ inputs.artifact-name }}" | cut -d'-' -f3)
-          # Set platform identifier based on platform and architecture
-          if [ "$PLATFORM" = "linux" ]; then
-            if [ "$ARCH" = "x86_64" ]; then
-              export PLATFORM_ID="manylinux_2_17_x86_64"
-            elif [ "$ARCH" = "aarch64" ]; then
-              export PLATFORM_ID="manylinux_2_17_aarch64"
-            fi
-          elif [ "$PLATFORM" = "macos" ]; then
-            if [ "$ARCH" = "x86_64" ]; then
-              export PLATFORM_ID="macosx_x86_64"
-            elif [ "$ARCH" = "aarch64" ]; then
-              export PLATFORM_ID="macosx_arm64"
-            fi
-          fi
-          # Build wheel with platform identifier
-          python setup.py bdist_wheel --plat-name=$PLATFORM_ID
+          # Download native libraries for current platform
+          python3 scripts/download_artifacts.py c2pa-v0.55.0
+          # Build wheel
+          python setup.py bdist_wheel
 
       - name: Build wheel (Windows)
         if: runner.os == 'Windows'
         shell: pwsh
         run: |
-          # Extract platform info from artifact name
-          $artifactName = "${{ inputs.artifact-name }}"
-          $parts = $artifactName -split '-'
-          $PLATFORM = $parts[1]
-          $ARCH = $parts[2]
-          # Set platform identifier
-          if ($ARCH -eq "x64") {
-            $env:PLATFORM_ID = "win_amd64"
-          } elseif ($ARCH -eq "x86") {
-            $env:PLATFORM_ID = "win32"
-          }
-          # Build wheel with platform identifier
-          python setup.py bdist_wheel --plat-name=$env:PLATFORM_ID
+          # Download native libraries for current platform
+          python scripts/download_artifacts.py c2pa-v0.55.0
+          # Build wheel
+          python setup.py bdist_wheel
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
