--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -398,41 +398,22 @@ jobs:
       - uses: actions/checkout@v4
       - name: Create dist directory
         run: mkdir -p dist
-      - name: Download Linux wheels
+      - name: Debug - List dist before download
+        run: |
+          echo "=== Dist directory before download ==="
+          ls -la dist/ || echo "dist is empty"
+      - name: Download all wheels
         uses: actions/download-artifact@v4
         with:
-          name: wheels-linux-x86_64
+          pattern: wheels-*
           path: dist
-      - name: Download Linux ARM wheels
-        uses: actions/download-artifact@v4
-        with:
-          name: wheels-linux-aarch64
-          path: dist
-      - name: Download macOS wheels
-        uses: actions/download-artifact@v4
-        with:
-          name: wheels-macos-x86_64
-          path: dist
-      - name: Download macOS ARM wheels
-        uses: actions/download-artifact@v4
-        with:
-          name: wheels-macos-aarch64
-          path: dist
-      - name: Download Windows wheels
-        uses: actions/download-artifact@v4
-        with:
-          name: wheels-windows-x64
-          path: dist
-      - name: Download Windows 32-bit wheels
-        uses: actions/download-artifact@v4
-        with:
-          name: wheels-windows-x86
-          path: dist
-      - name: Download source distribution
-        uses: actions/download-artifact@v4
-        with:
-          name: wheels-sdist
-          path: dist
+          merge-multiple: true
+      - name: Debug - List downloaded artifacts
+        run: |
+          echo "=== Downloaded artifacts structure ==="
+          find dist -type f -ls
+          echo "=== Downloaded artifacts contents ==="
+          ls -R dist/
       - name: Debug - List final dist directory
         run: |
           echo "=== Final dist directory contents ==="
