--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -45,7 +45,7 @@ jobs:
             /opt/python/cp310-cp310/bin/python scripts/download_artifacts.py c2pa-v0.55.0 &&
             for PYBIN in /opt/python/cp3{10,11}-*/bin; do
               \${PYBIN}/pip install --upgrade pip wheel &&
-              \${PYBIN}/python setup.py bdist_wheel
+              CFLAGS="-I/opt/python/cp310-cp310/include/python3.10" LDFLAGS="-L/opt/python/cp310-cp310/lib" \${PYBIN}/python setup.py bdist_wheel --plat-name manylinux_2_28_x86_64
             done &&
             for whl in /io/dist/*.whl; do
               auditwheel repair \"\$whl\" --plat manylinux_2_28_x86_64 -w /io/dist/
@@ -72,26 +72,54 @@ jobs:
           New-Item -ItemType Directory -Force -Path src/c2pa/libs
           if (Test-Path dist) { Remove-Item -Recurse -Force dist }
           if (Test-Path build) { Remove-Item -Recurse -Force build }
-          
+
           # Install dependencies
           pip install -r requirements.txt
           pip install -r requirements-dev.txt
           pip install wheel
-          
+
           # Download native artifacts
           python scripts/download_artifacts.py c2pa-v0.55.0
-          
+
           # Build wheel
           python setup.py bdist_wheel --plat-name win_amd64
 
       - name: Build macOS wheel (Intel)
         if: runner.os == 'macOS' && runner.arch == 'x64'
         run: |
+          # Create necessary directories
+          mkdir -p artifacts
+          mkdir -p src/c2pa/libs
+          rm -rf dist build
+
+          # Install dependencies
+          pip install -r requirements.txt
+          pip install -r requirements-dev.txt
+          pip install wheel
+
+          # Download native artifacts
+          python scripts/download_artifacts.py c2pa-v0.55.0
+
+          # Build wheel
           python setup.py bdist_wheel --plat-name macosx_10_9_x86_64
 
       - name: Build macOS wheel (Apple Silicon)
         if: runner.os == 'macOS' && runner.arch == 'arm64'
         run: |
+          # Create necessary directories
+          mkdir -p artifacts
+          mkdir -p src/c2pa/libs
+          rm -rf dist build
+
+          # Install dependencies
+          pip install -r requirements.txt
+          pip install -r requirements-dev.txt
+          pip install wheel
+
+          # Download native artifacts
+          python scripts/download_artifacts.py c2pa-v0.55.0
+
+          # Build wheel
           python setup.py bdist_wheel --plat-name macosx_11_0_arm64
 
       - name: Log wheel filename
