--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -32,49 +32,95 @@ jobs:
       GITHUB_TOKEN: ${{ secrets.github-token }}
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: ${{ inputs.python-version }}
-          architecture: ${{ inputs.architecture }}
-          cache: "pip"
-      - name: Install dependencies
-        run: pip install -r requirements.txt
-      - name: Install project development dependencies
-        run: python -m pip install -r requirements-dev.txt
-      - name: Prepare build directories (Unix)
-        shell: bash
-        if: runner.os != 'Windows'
-        run: |
-          mkdir -p artifacts
-          mkdir -p src/c2pa/libs
-          rm -rf dist build
 
-      - name: Prepare build directories (Windows)
-        shell: pwsh
-        if: runner.os == 'Windows'
+      - name: Build Linux wheels
+        if: runner.os == 'Linux'
         run: |
+          docker run --rm -v $PWD:/io quay.io/pypa/manylinux_2_28_x86_64 bash -c "
+            yum install -y gcc gcc-c++ make &&
+            mkdir -p /io/artifacts /io/src/c2pa/libs &&
+            rm -rf /io/dist /io/build &&
+            cd /io &&
+            /opt/python/cp310-cp310/bin/pip install -r requirements.txt -r requirements-dev.txt &&
+            /opt/python/cp310-cp310/bin/python scripts/download_artifacts.py c2pa-v0.55.0 &&
+            for PYBIN in /opt/python/cp3{10,11}-*/bin; do
+              \${PYBIN}/pip install --upgrade pip wheel &&
+              CFLAGS=\"-I/opt/python/cp310-cp310/include/python3.10\" LDFLAGS=\"-L/opt/python/cp310-cp310/lib\" \${PYBIN}/python setup.py bdist_wheel --plat-name manylinux_2_28_x86_64
+            done &&
+            rm -f /io/dist/*-linux_*.whl
+          "
+
+      - name: Verify Linux wheels
+        if: runner.os == 'Linux'
+        run: |
+          echo "Contents of dist directory:"
+          ls -la dist/
+          echo "Number of wheels found:"
+          find dist -name "*.whl" | wc -l
+          echo "Wheel filenames:"
+          find dist -name "*.whl" -exec basename {} \;
+
+      - name: Build Windows wheel
+        if: runner.os == 'Windows'
+        shell: pwsh
+        run: |
+          # Create necessary directories
           New-Item -ItemType Directory -Force -Path artifacts
           New-Item -ItemType Directory -Force -Path src/c2pa/libs
           if (Test-Path dist) { Remove-Item -Recurse -Force dist }
           if (Test-Path build) { Remove-Item -Recurse -Force build }
-      - name: Download native artifacts (from tag c2pa-v0.55.0)
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: python3 scripts/download_artifacts.py c2pa-v0.55.0
-      - name: Build wheel (Unix)
-        if: runner.os != 'Windows'
-        run: |
-          # Build wheel
-          python setup.py bdist_wheel
 
-      - name: Build wheel (Windows)
-        if: runner.os == 'Windows'
-        shell: pwsh
-        run: |
+          # Install dependencies
+          pip install -r requirements.txt
+          pip install -r requirements-dev.txt
+          pip install wheel
+
+          # Download native artifacts
+          python scripts/download_artifacts.py c2pa-v0.55.0
+
           # Build wheel
-          python setup.py bdist_wheel
+          python setup.py bdist_wheel --plat-name win_amd64
+
+      - name: Build macOS wheel (Intel)
+        if: runner.os == 'macOS' && runner.arch == 'x64'
+        run: |
+          # Create necessary directories
+          mkdir -p artifacts
+          mkdir -p src/c2pa/libs
+          rm -rf dist build
+
+          # Install dependencies
+          pip install -r requirements.txt
+          pip install -r requirements-dev.txt
+          pip install wheel
+
+          # Download native artifacts
+          python scripts/download_artifacts.py c2pa-v0.55.0
+
+          # Build wheel
+          python setup.py bdist_wheel --plat-name macosx_10_9_x86_64
+
+      - name: Build macOS wheel (Apple Silicon)
+        if: runner.os == 'macOS' && runner.arch == 'arm64'
+        run: |
+          # Create necessary directories
+          mkdir -p artifacts
+          mkdir -p src/c2pa/libs
+          rm -rf dist build
+
+          # Install dependencies
+          pip install -r requirements.txt
+          pip install -r requirements-dev.txt
+          pip install wheel
+
+          # Download native artifacts
+          python scripts/download_artifacts.py c2pa-v0.55.0
+
+          # Build wheel
+          python setup.py bdist_wheel --plat-name macosx_11_0_arm64
 
       - name: Log wheel filename
+        if: runner.os == 'Linux' || runner.os == 'macOS'
         shell: bash
         run: |
           echo "Built wheel:"
