--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -156,12 +156,16 @@ jobs:
       python-version: "3.10"
       architecture: ${{ matrix.target }}
       artifact-name: wheels-linux-${{ matrix.target }}
-      runs-on: ubuntu-latest
+      runs-on: ${{ matrix.runs-on }}
     secrets:
       github-token: ${{ secrets.GITHUB_TOKEN }}
     strategy:
       matrix:
-        target: [x86_64, aarch64]
+        include:
+          - target: x86_64
+            runs-on: ubuntu-latest
+          - target: aarch64
+            runs-on: ubuntu-latest-arm64
     if: |
       github.event_name != 'pull_request' ||
       github.event.pull_request.author_association == 'COLLABORATOR' ||
