fix: Update test setup

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -163,7 +163,7 @@ jobs:
       matrix:
         include:
           - target: x86_64
-            runs-on: ubuntu-latest
+            runs-on: ubuntu-24.04
           - target: aarch64
             runs-on: ubuntu-24.04-arm
     if: |
@@ -176,10 +176,14 @@ jobs:
   test-built-linux-wheel:
     name: Test Linux built wheel
     needs: build-linux-wheel
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.runs-on }}
     strategy:
       matrix:
-        target: [x86_64, aarch64]
+        include:
+          - target: x86_64
+            runs-on: ubuntu-24.04
+          - target: aarch64
+            runs-on: ubuntu-24.04-arm
     if: |
       github.event_name != 'pull_request' ||
       github.event.pull_request.author_association == 'COLLABORATOR' ||
