--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,5 +37,6 @@ test = [
 [project.scripts]
 download-artifacts = "c2pa.build:download_artifacts"
 
+# Workaround to prevent setuptools from automatically including invalid metadata
 [tool.setuptools]
 license-files = []
