--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -25,11 +25,12 @@ permissions:
   packages: read
   actions: read
 
+env:
+  GITHUB_TOKEN: ${{ secrets.github-token }}
+
 jobs:
   build:
     runs-on: ${{ inputs.runs-on }}
-    env:
-      GITHUB_TOKEN: ${{ secrets.github-token }}
     steps:
       - uses: actions/checkout@v4
 
@@ -61,6 +62,7 @@ jobs:
             C2PA_LIBS_PLATFORM=\"${{ inputs.architecture == 'aarch64' && 'aarch64-unknown-linux-gnu' || 'x86_64-unknown-linux-gnu' }}\" /opt/python/cp310-cp310/bin/python scripts/download_artifacts.py c2pa-v0.55.0 &&
             for PYBIN in /opt/python/cp3{10,11}-*/bin; do
               \${PYBIN}/pip install --upgrade pip wheel &&
+              \${PYBIN}/pip install toml &&
               CFLAGS=\"-I/opt/python/cp310-cp310/include/python3.10\" LDFLAGS=\"-L/opt/python/cp310-cp310/lib\" \${PYBIN}/python setup.py bdist_wheel --plat-name $PLATFORM_TAG
             done &&
             rm -f /io/dist/*-linux_*.whl
