--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -154,13 +154,16 @@ jobs:
     needs: tests-unix
     with:
       python-version: "3.10"
+      architecture: ${{ matrix.target }}
       artifact-name: wheels-linux-${{ matrix.target }}
-      runs-on: ubuntu-latest
+      runs-on: ${{ matrix.runs-on }}
     secrets:
       github-token: ${{ secrets.GITHUB_TOKEN }}
     strategy:
       matrix:
-        target: [x86_64, aarch64]
+        include:
+          - target: x86_64
+            runs-on: ubuntu-24.04
     if: |
       github.event_name != 'pull_request' ||
       github.event.pull_request.author_association == 'COLLABORATOR' ||
@@ -171,10 +174,12 @@ jobs:
   test-built-linux-wheel:
     name: Test Linux built wheel
     needs: build-linux-wheel
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.runs-on }}
     strategy:
       matrix:
-        target: [x86_64, aarch64]
+        include:
+          - target: x86_64
+            runs-on: ubuntu-24.04
     if: |
       github.event_name != 'pull_request' ||
       github.event.pull_request.author_association == 'COLLABORATOR' ||
@@ -236,7 +241,7 @@ jobs:
       github-token: ${{ secrets.GITHUB_TOKEN }}
     strategy:
       matrix:
-        target: [x64, x86]
+        target: [x64]
     if: |
       github.event_name != 'pull_request' ||
       github.event.pull_request.author_association == 'COLLABORATOR' ||
@@ -250,7 +255,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        target: [x64, x86]
+        target: [x64]
     if: |
       github.event_name != 'pull_request' ||
       github.event.pull_request.author_association == 'COLLABORATOR' ||
@@ -313,7 +318,7 @@ jobs:
       github-token: ${{ secrets.GITHUB_TOKEN }}
     strategy:
       matrix:
-        target: [x86_64, aarch64]
+        target: [aarch64]
     if: |
       github.event_name != 'pull_request' ||
       github.event.pull_request.author_association == 'COLLABORATOR' ||
@@ -327,7 +332,7 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        target: [x86_64, aarch64]
+        target: [aarch64]
     if: |
       github.event_name != 'pull_request' ||
       github.event.pull_request.author_association == 'COLLABORATOR' ||
@@ -394,6 +399,8 @@ jobs:
           cache: "pip"
       - name: Install dependencies
         run: pip install -r requirements.txt
+      - name: Install dev dependencies for build
+        run: pip install -r requirements-dev.txt
       - name: Build sdist
         run: python setup.py sdist
       - name: Upload sdist
@@ -415,41 +422,12 @@ jobs:
       - uses: actions/checkout@v4
       - name: Create dist directory
         run: mkdir -p dist
-      - name: Debug - List dist before download
-        run: |
-          echo "=== Dist directory before download ==="
-          ls -la dist/ || echo "dist is empty"
       - name: Download all wheels
         uses: actions/download-artifact@v4
         with:
           pattern: wheels-*
           path: dist
           merge-multiple: true
-      - name: Debug - List downloaded artifacts
-        run: |
-          echo "=== Downloaded artifacts structure ==="
-          find dist -type f -ls
-          echo "=== Downloaded artifacts contents ==="
-          ls -R dist/
-          echo "=== Artifact details ==="
-          for file in dist/*; do
-            echo "File: $file"
-            echo "Size: $(stat -f %z "$file")"
-            echo "Last modified: $(stat -f %Sm "$file")"
-            echo "---"
-          done
-          echo "=== Platform-specific artifacts ==="
-          echo "Linux x86_64: $(ls -l dist/wheels-linux-x86_64/* 2>/dev/null || echo 'Not found')"
-          echo "Linux aarch64: $(ls -l dist/wheels-linux-aarch64/* 2>/dev/null || echo 'Not found')"
-          echo "macOS x86_64: $(ls -l dist/wheels-macos-x86_64/* 2>/dev/null || echo 'Not found')"
-          echo "macOS aarch64: $(ls -l dist/wheels-macos-aarch64/* 2>/dev/null || echo 'Not found')"
-          echo "Windows x64: $(ls -l dist/wheels-windows-x64/* 2>/dev/null || echo 'Not found')"
-          echo "Windows x86: $(ls -l dist/wheels-windows-x86/* 2>/dev/null || echo 'Not found')"
-          echo "SDist: $(ls -l dist/wheels-sdist/* 2>/dev/null || echo 'Not found')"
-      - name: Debug - List final dist directory
-        run: |
-          echo "=== Final dist directory contents ==="
-          ls -la dist/ || echo "dist is empty"
       - name: Publish to TestPyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
