fix: Stream exception

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,7 +5,8 @@ build==1.0.3  # For building packages using PEP 517/518
 toml==0.10.2  # For reading pyproject.toml files
 
 # Testing dependencies
-pytest==7.4.0
+pytest>=8.1.0
+pytest-benchmark>=5.1.0
 
 # for downloading the library artifacts
 requests>=2.0.0
